[project]
name = "open-chat-studio"
version = "0.1.0"
requires-python = ">=3.11"
description = "A web application for building and deploying chatbots."
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "Django",
    "Markdown",
    "anthropic",
    "azure-cognitiveservices-speech",
    "boto3",
    "celery",
    "celery-progress",
    "celery[redis]",
    "django-allauth",
    "django-allauth-2fa",
    "django-anymail",
    "django-cleanup",
    "django-cryptography-django5",
    "django-environ",
    "django-field-audit>=1.2.7",
    "django-health-check",
    "django-redis",
    "django-storages[s3]",
    "django-tables2",
    "django-taggit",
    "django-template-partials",
    "django-tz-detect",
    "django-waffle",
    "django_celery_beat",
    "djangorestframework",
    "djangorestframework-api-key",
    "drf-spectacular",
    "fbmessenger",
    "ffmpeg",  # Audio transcription
    "httpx",
    "jinja2",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3.23,<0.4",
    "langchain-anthropic",
    "langchain-openai>0.3.9",
    "langchain_google_genai",
    "langchain-community>=0.3,<0.4",
    "langfuse>=2.59.7",
    "langgraph>=0.2.20",
    "loguru",
    "nh3",
    "openai",
    "openapi_pydantic",
    "pandas",
    "psycopg[binary]",
    "pyTelegramBotAPI==4.12.0",
    "pydantic",
    "pydub",  # Audio transcription
    "pypdf",
    "RestrictedPython",
    "sentry-sdk",
    "slack-bolt",
    "taskbadger",
    "tenacity",
    "tiktoken",
    "transformers>=4.48.0",  # this is required by the tokenizer that langchain uses
    "turn-python>=0.2.0",
    "twilio",
    "whitenoise[brotli]",
    "phonenumberslite",
    "emoji",
    "python-magic",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "pycryptodome",
    "python-docx",
]

[project.urls]
Homepage = "https://sites.dimagi.com/open-chat-studio"
Documentation = "https://docs.openchatstudio.com"
Repository = "https://github.com/dimagi/open-chat-studio"
Issues = "https://github.com/dimagi/open-chat-studio/issues"
Changelog = "https://docs.openchatstudio.com/changelog/"

[tool.pytest.ini_options]
addopts = "--ds=gpt_playground.settings --reuse-db --strict-markers --tb=short"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".* build dist venv node_modules compose assets static"

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    'migrations'
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ", "PT", "B"]
ignore = ["PT019"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.extend-per-file-ignores]
"settings_production.py" = ["F405"]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true
fixture-parentheses = true

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mock",
    "freezegun",
    "invoke",
    "termcolor",
    "watchfiles",
    "pytest",
    "pytest-django",
    "factory-boy",
    "pytest-httpx",
    "pytest-cov",
    "pytest-xdist",
]

prod = [
    "gunicorn",
    "gevent",
]

[tool.uv]
# Ensure that the grpcio version is always less than 1.65, if it's requested by a
# direct or transitive dependency.
constraint-dependencies = [
    "aiohappyeyeballs==2.3.5",
    "aiohttp==3.10.11",
    "aiohttp-retry==2.8.3",
    "aiosignal==1.3.1",
    "amqp==5.2.0",
    "annotated-types==0.6.0",
    "anthropic==0.37.1",
    "anyio==4.4.0",
    "asgiref==3.8.1",
    "attrs==23.1.0",
    "azure-cognitiveservices-speech==1.32.1",
    "backoff==2.2.1",
    "billiard==4.2.0",
    "boto3==1.35.71",
    "botocore==1.35.71",
    "brotli==1.1.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "celery==5.3.5",
    "celery-progress==0.4",
    "certifi==2024.7.4",
    "cfgv==3.4.0",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "click-didyoumean==0.3.0",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "coverage==7.6.4",
    "cron-descriptor==1.4.0",
    "cryptography==43.0.1",
    "dataclasses-json==0.6.7",
    "defusedxml==0.7.1",
    "distlib==0.3.9",
    "distro==1.8.0",
    "django==5.1.5",
    "django-allauth==0.58.2",
    "django-allauth-2fa==0.11.1",
    "django-anymail==10.2",
    "django-appconf==1.0.5",
    "django-celery-beat==2.7.0",
    "django-cleanup==9.0.0",
    "django-cryptography-django5==2.2",
    "django-environ==0.11.2",
    "django-field-audit==1.2.9",
    "django-health-check==3.18.3",
    "django-otp==1.3.0",
    "django-redis==5.4.0",
    "django-storages==1.14.2",
    "django-tables2==2.7.0",
    "django-taggit==5.0.1",
    "django-template-partials==24.4",
    "django-timezone-field==7.0",
    "django-tz-detect==0.5.0",
    "django-waffle==4.1.0",
    "djangorestframework==3.15.2",
    "djangorestframework-api-key==3.0.0",
    "drf-spectacular==0.26.5",
    "emoji==2.14.0",
    "execnet==2.1.1",
    "factory-boy==3.3.3",
    "faker==30.8.1",
    "fbmessenger==6.0.0",
    "ffmpeg==1.4",
    "filelock==3.13.1",
    "filetype==1.2.0",
    "freezegun==1.5.1",
    "frozenlist==1.4.0",
    "fsspec==2023.12.2",
    "gevent==24.2.1",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.1",
    "google-api-python-client==2.161.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.4",
    "googleapis-common-protos==1.68.0",
    "greenlet==3.0.1",
    "grpcio==1.70.0",
    "grpcio-status==1.70.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.27.2",
    "huggingface-hub==0.26.2",
    "identify==2.6.1",
    "idna==3.7",
    "inflection==0.5.1",
    "iniconfig==2.0.0",
    "invoke==2.2.0",
    "jinja2==3.1.5",
    "jiter==0.6.1",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==2.4",
    "jsonschema==4.19.2",
    "jsonschema-specifications==2023.7.1",
    "kombu==5.3.3",
    "langchain==0.3.9",
    "langchain-anthropic==0.2.3",
    "langchain-community==0.3.3",
    "langchain-core==0.3.55",
    "langchain-google-genai==2.0.7",
    "langchain-openai==0.3.12",
    "langchain-text-splitters==0.3.0",
    "langfuse==2.59.7",
    "langgraph==0.3.31",
    "langgraph-checkpoint==2.0.24",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.63",
    "langsmith==0.1.137",
    "loguru==0.7.2",
    "lxml==5.3.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "marshmallow==3.23.0",
    "mdurl==0.1.2",
    "mock==5.2.0",
    "multidict==6.0.4",
    "mypy-extensions==1.0.0",
    "nh3==0.2.21",
    "nodeenv==1.9.1",
    "numpy==1.26.2",
    "oauthlib==3.2.2",
    "openai==1.74.0",
    "openapi-pydantic==0.5.0",
    "orjson==3.10.16",
    "ormsgpack==1.9.1",
    "packaging==23.2",
    "pandas==2.2.3",
    "phonenumberslite==8.13.47",
    "pip==25.0.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pre-commit==4.2.0",
    "prompt-toolkit==3.0.41",
    "propcache==0.2.0",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "psycopg==3.2.1",
    "psycopg-binary==3.2.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.21",
    "pycryptodome==3.21.0",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.0",
    "pydub==0.25.1",
    "pygments==2.16.1",
    "pyjwt==2.8.0",
    "pyparsing==3.2.1",
    "pypdf==5.2.0",
    "pypng==0.20220715.0",
    "pyproject-hooks==1.2.0",
    "pytelegrambotapi==4.12.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-django==4.10.0",
    "pytest-httpx==0.34.0",
    "pytest-xdist==3.6.1",
    "python-crontab==3.0.0",
    "python-dateutil==2.8.2",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "python3-openid==3.2.0",
    "pytz==2023.3.post1",
    "pyyaml==6.0.1",
    "qrcode==7.4.2",
    "redis==5.0.3",
    "referencing==0.30.2",
    "regex==2023.12.25",
    "requests==2.32.3",
    "requests-oauthlib==1.3.1",
    "requests-toolbelt==1.0.0",
    "restrictedpython==8.0",
    "rich==13.6.0",
    "rpds-py==0.12.0",
    "rsa==4.9",
    "ruff==0.11.2",
    "s3transfer==0.10.3",
    "safetensors==0.4.3",
    "sentry-sdk==2.17.0",
    "shellingham==1.5.4",
    "six==1.16.0",
    "slack-bolt==1.18.1",
    "slack-sdk==3.27.2",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.23",
    "sqlparse==0.5.0",
    "taskbadger==1.5.0",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "tiktoken==0.8.0",
    "tokenizers==0.21.0",
    "tomlkit==0.12.5",
    "tqdm==4.66.3",
    "transformers==4.48.3",
    "turn-python==0.2.0",
    "twilio==9.3.6",
    "typer==0.9.0",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2023.3",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "vine==5.1.0",
    "virtualenv==20.27.1",
    "watchfiles==1.0.4",
    "wcwidth==0.2.10",
    "wheel==0.44.0",
    "whitenoise==6.6.0",
    "wrapt==1.16.0",
    "xxhash==3.5.0",
    "yarl==1.18.0",
    "zope-event==5.0",
    "zope-interface==6.1",
]
