[project]
name = "open-chat-studio"
version = "0.1.0"
requires-python = ">=3.13"
description = "A web application for building and deploying chatbots."
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "Django",
    "Markdown",
    "anthropic",
    "azure-cognitiveservices-speech",
    "boto3",
    "celery",
    "celery-progress",
    "celery[redis]",
    "django-allauth",
    "django-allauth-2fa",
    "django-anymail",
    "django-cleanup",
    "django-cryptography-django5",
    "django-environ",
    "django-field-audit>=1.2.7",
    "django-health-check",
    "django-redis",
    "django-storages[s3]",
    "django-tables2",
    "django-taggit",
    "django-template-partials",
    "django-tz-detect",
    "django-waffle",
    "django_celery_beat",
    "djangorestframework",
    "djangorestframework-api-key",
    "drf-spectacular",
    "fbmessenger",
    "ffmpeg", # Audio transcription
    "httpx",
    "jinja2",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3.23,<0.4",
    "langchain-anthropic",
    "langchain-openai>0.3.9",
    "langchain_google_genai",
    "langchain-community>=0.3,<0.4",
    "langfuse>=2.59.7",
    "langgraph>=0.2.20",
    "loguru",
    "nh3",
    "openai",
    "openapi_pydantic",
    "pandas",
    "psycopg[binary]",
    "psycopg-pool>=3.2.6",
    "pyTelegramBotAPI==4.12.0",
    "pydantic",
    "pydub", # Audio transcription
    "RestrictedPython",
    "sentry-sdk",
    "slack-bolt",
    "taskbadger",
    "tenacity",
    "tiktoken",
    "transformers>=4.48.0", # this is required by the tokenizer that langchain uses
    "turn-python>=1.0.0",
    "twilio",
    "whitenoise[brotli]",
    "phonenumberslite",
    "emoji",
    "python-magic",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "pycryptodome",
    "django-pydantic-field",
    "pgvector",
    "backoff",
    "django-cors-headers>=4.7.0",
    "markitdown[pdf, docx, xlsx, xls, outlook, pptx]",
    "langchain-mcp-adapters",
    "atlassian-python-api>=4.0.7",
    "audioop-lts>=0.2.2",
    "django-browser-reload>=1.21.0",
    "django-watchfiles>=1.4.0",
]

[project.urls]
Homepage = "https://sites.dimagi.com/open-chat-studio"
Documentation = "https://docs.openchatstudio.com"
Repository = "https://github.com/dimagi/open-chat-studio"
Issues = "https://github.com/dimagi/open-chat-studio/issues"
Changelog = "https://docs.openchatstudio.com/changelog/"

[tool.pytest.ini_options]
addopts = "--ds=gpt_playground.settings --reuse-db --strict-markers --tb=short"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".* build dist venv node_modules compose assets static"

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    'migrations'
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ", "PT", "B", "SIM"]
ignore = ["PT019", "SIM102", "SIM108", "SIM117"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.extend-per-file-ignores]
"settings_production.py" = ["F405"]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true
fixture-parentheses = true

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mock",
    "invoke",
    "termcolor",
    "time-machine",
    "watchfiles",
    "pytest",
    "pytest-django",
    "factory-boy",
    "pytest-httpx",
    "pytest-cov",
    "pytest-xdist",
    "django-debug-toolbar>=5.2.0",
    "djlint>=1.36.4",
]
docs = [
    "mkdocs-material>=9.6.12",
]

prod = [
    "gunicorn",
    "gevent==24.*"
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.djlint]
profile="django"
format_attribute_template_tags=true
use_gitignore=true
indent=2
ignore="H030,H031,H021,H006,H013,H014,T003"
