[project]
name = "open-chat-studio"
version = "0.1.0"
requires-python = ">=3.13"
description = "A web application for building and deploying chatbots."
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "Django",
    "Markdown",
    "anthropic",
    "azure-cognitiveservices-speech",
    "boto3",
    "celery",
    "celery-progress",
    "celery[redis]",
    "django-allauth[mfa]>=0.56.0",
    "django-anymail",
    "django-cleanup",
    "django-cryptography-django5",
    "django-environ",
    "django-field-audit>=1.2.7",
    "django-health-check",
    "django-redis",
    "django-storages[s3]",
    "django-tables2",
    "django-taggit",
    "django-template-partials",
    "django-tz-detect",
    "django-waffle",
    "django_celery_beat",
    "djangorestframework",
    "djangorestframework-api-key",
    "drf-spectacular",
    "fbmessenger",
    "ffmpeg", # Audio transcription
    "httpx",
    "jinja2",
    "langchain>=1.1.0",
    "langchain-core>=0.3.23",
    "langchain-anthropic",
    "langchain-openai>1.0.0",
    "langchain_google_genai",
    "langchain-community>=0.3",
    "langfuse>=2.59.7",
    "langgraph>=0.2.20",
    "loguru",
    "nh3",
    "openai",
    "openapi_pydantic",
    "pandas",
    "psycopg[binary]",
    "psycopg-pool>=3.2.6",
    "pyTelegramBotAPI==4.12.0",
    "pydantic",
    "pydub", # Audio transcription
    "RestrictedPython",
    "sentry-sdk",
    "slack-bolt",
    "taskbadger>1.6.1",
    "tenacity",
    "tiktoken",
    "turn-python>=1.0.0",
    "twilio",
    "whitenoise[brotli]",
    "phonenumberslite",
    "emoji",
    "python-magic",
    "urllib3>=2.3.0",
    "pycryptodome",
    "django-pydantic-field",
    "pgvector",
    "backoff",
    "django-cors-headers>=4.7.0",
    "markitdown[pdf, docx, xlsx, xls, outlook, pptx]",
    "langchain-mcp-adapters",
    "atlassian-python-api>=4.0.7",
    "audioop-lts>=0.2.2",
    "django-htmx>=1.26.0",
    "django-browser-reload>=1.21.0",
    "django-watchfiles>=1.4.0",
    "django-silk>=5.4.3",
    "django-oauth-toolkit>=3.1.0,<4.0.0",
    "langchain-classic>=1.0.0",
    "langchain-google-vertexai",
    "python-json-logger>=3.2.1",
    "chardet"
]

[project.urls]
Homepage = "https://sites.dimagi.com/open-chat-studio"
Documentation = "https://docs.openchatstudio.com"
Repository = "https://github.com/dimagi/open-chat-studio"
Issues = "https://github.com/dimagi/open-chat-studio/issues"
Changelog = "https://docs.openchatstudio.com/changelog/"

[tool.pytest.ini_options]
addopts = "--ds=config.settings --reuse-db --strict-markers --tb=short -m \"not integration\""
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".* build dist venv node_modules compose assets static"
markers = [
    "integration: marks tests as integration tests (deselected by default)",
]

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    'migrations'
]

line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ", "PT", "B", "SIM"]
ignore = ["PT019", "SIM102", "SIM108", "SIM117"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.extend-per-file-ignores]
"settings_production.py" = ["F405"]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true
fixture-parentheses = true

[dependency-groups]
dev = [
    "ruff",
    "mock",
    "invoke",
    "termcolor",
    "time-machine",
    "watchfiles",
    "pytest",
    "pytest-django",
    "factory-boy",
    "pytest-httpx",
    "pytest-cov",
    "pytest-xdist",
    "django-debug-toolbar>=5.2.0",
    "djlint>=1.36.4",
    "prek>=0.3.2",
    "django-types",
    "ty",
]
docs = [
    "mkdocs-material>=9.6.12",
]

prod = [
    "gunicorn",
    "gevent==25.*"
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.djlint]
profile="django"
format_attribute_template_tags=true
use_gitignore=true
indent=2
ignore="H030,H031,H021,H006,H013,H014,T003"

[tool.ty]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["migrations/"]

[tool.ty.rules]
all = "ignore"
unresolved-import = "error"
# Zero-violation rules enabled for regression prevention
abstract-method-in-final-class = "error"
byte-string-type-annotation = "error"
call-non-callable = "error"
call-top-callable = "error"
conflicting-argument-forms = "error"
conflicting-declarations = "error"
conflicting-metaclass = "error"
cyclic-class-definition = "error"
cyclic-type-alias-definition = "error"
dataclass-field-order = "error"
division-by-zero = "error"
duplicate-base = "error"
duplicate-kw-only = "error"
empty-body = "error"
escape-character-in-forward-annotation = "error"
final-without-value = "error"
fstring-type-annotation = "error"
implicit-concatenated-string-type-annotation = "error"
inconsistent-mro = "error"
instance-layout-conflict = "error"
invalid-attribute-access = "error"
invalid-await = "error"
invalid-base = "error"
invalid-context-manager = "error"
invalid-dataclass = "error"
invalid-dataclass-override = "error"
invalid-declaration = "error"
invalid-exception-caught = "error"
invalid-explicit-override = "error"
invalid-frozen-dataclass-subclass = "error"
invalid-generic-class = "error"
invalid-generic-enum = "error"
invalid-ignore-comment = "error"
invalid-key = "error"
invalid-legacy-positional-parameter = "error"
invalid-legacy-type-variable = "error"
invalid-metaclass = "error"
invalid-named-tuple = "error"
invalid-newtype = "error"
invalid-overload = "error"
invalid-paramspec = "error"
invalid-protocol = "error"
invalid-raise = "error"
invalid-super-argument = "error"
invalid-syntax-in-forward-annotation = "error"
invalid-total-ordering = "error"
invalid-type-alias-type = "error"
invalid-type-arguments = "error"
invalid-type-checking-constant = "error"
invalid-type-guard-call = "error"
invalid-type-guard-definition = "error"
invalid-type-variable-bound = "error"
invalid-type-variable-constraints = "error"
invalid-type-variable-default = "error"
invalid-typed-dict-header = "error"
invalid-typed-dict-statement = "error"
isinstance-against-protocol = "error"
isinstance-against-typed-dict = "error"
override-of-final-method = "error"
override-of-final-variable = "error"
parameter-already-assigned = "error"
positional-only-parameter-as-kwarg = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
raw-string-type-annotation = "error"
redundant-cast = "error"
static-assert-error = "error"
subclass-of-final-class = "error"
super-call-in-named-tuple-method = "error"
type-assertion-failure = "error"
unavailable-implicit-super-arguments = "error"
undefined-reveal = "error"
unresolved-global = "error"
unresolved-reference = "error"
unsupported-bool-conversion = "error"
unsupported-operator = "error"
unsupported-dynamic-base = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"
useless-overload-body = "error"
zero-stepsize-in-slice = "error"
